  new rules by Zend Framework (we need your help translating the new
  messages now http://tinyurl.com/au5bvb)
- a bug with P4A_DB_Source::setWhere() method was fixed
- translations were synchronized
- auto file inclusion system was updated to avoid reading Mac hidden files
- a bug with P4A_DB_Source::addGroup() method was solved (internal syntax
  change due to a Zend Framework change)

3.2.1
- Zend Framework was updated to 1.7.4
- PEAR::Net_Useragent_Detect was updated to 2.5.0
- jQuery::form was updated to 2.19
- P4A_DB_Source::setQuery() now strips out final semicolon from the passed
  SQL query (if present) (bug #2557215)
- P4A_DB_Source::setWhere() now calls a firstRow() if the DB_Source isn't
  in the "new row" state (bug #2316271)
- P4A_Filename2File() now uses the fileinfo module if no mime type
  is detected otherways (bug #2121565)
- a bug with P4A_Field::getAsDate() and Internet Explorer was fixed
  (thanks to Mario Spada)
- P4A_Thumbnail_Generator::setWidth() now resets the max_width to avoid
  conflicts
- P4A_Thumbnail_Generator::setHeight() now resets the max_height to avoid
  conflicts
- P4A_Thumbnail_Generator::setMaxWidth() now resets the width to avoid
  conflicts
- P4A_Thumbnail_Generator::setMaxHeight() now resets the height to avoid
  conflicts
- P4A_Thumbnail_Generator::processFile() height/width calculation was
  rewritten in order to fix bug #2270922

3.2.0
- P4A is now released under LGPL 3
- P4A_APPLICATION_SOURCE_DOWNLOAD_URL constant was removed (along with the
  "download source" link in the footer)
- P4A_Grid widget was added
- P4A_Simple_Edit_Mask was added to quickly create a simple mask to edit
  a database table
- P4A_Mask_constructSimpleEdit() helper was added to manage the initialization
  of the P4A_Simple_Edit_Mask and to allow you to use that shortcut also
  when not inheriting from P4A_Simple_Edit_Mask
- P4A_Table::showRowIndicator() and hideRowIndicator() methods were added